--- a/App.xaml
+++ b/App.xaml
@@ -3,5 +3,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SmartMerchant">
+    <Application.Resources>
+        <local:BooleanNegationConverter x:Key="BooleanNegationConverter" />
+        <Color x:Key="MenuColor">#0b2027</Color>
+        <SolidColorBrush x:Key="MyBlack" Color="{StaticResource MenuColor}" />
+        <Color x:Key="NavColor">#FFCFD7C7</Color>
+        <SolidColorBrush x:Key="MyGreen" Color="{StaticResource NavColor}" />
+        <Color x:Key="ButtonColor">#63adf2</Color>
+        <SolidColorBrush x:Key="MyBlue" Color="{StaticResource ButtonColor}" />
+    </Application.Resources>
 
 </Application>
