--- a/View/MainPage.xaml
+++ b/View/MainPage.xaml
@@ -1,11 +1,14 @@
-﻿<Page
+﻿<local:BindablePage
     x:Class="SmartMerchant.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SmartMerchant"
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
+    DataContext="{Binding Main, Source={StaticResource Locator}}"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
@@ -17,12 +20,77 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition />
             </Grid.RowDefinitions>
-            <Grid Background="#0b2027">
-                <Image Source="ms-appx:///Assets/top.png" Height="60" Margin="0,10"/>
-            </Grid>
+            <StackPanel Orientation="Horizontal" Background="#0b2027">
+                <AppBarButton Icon="AllApps"  Margin="0" >
+                    <Button.Flyout>
+                        <Flyout Placement="Left">
+                            <Grid>
+                                <Grid.Background>
+                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                        <GradientStop Color="#FF948E8E" Offset="0"/>
+                                        <GradientStop Color="White" Offset="1"/>
+                                    </LinearGradientBrush>
+                                </Grid.Background>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <StackPanel Background="{StaticResource MyBlack}">
+                                    <StackPanel Margin="0,15">
+                                        <Image Source="ms-appx:///Assets/top.png" Height="50"  Margin="0" />
+                                    </StackPanel>
+                                </StackPanel>
+                                <StackPanel Grid.Row="1">
+                                    <StackPanel.Resources>
+                                        <Style TargetType="Image">
+                                            <Setter Property="Margin" Value="30,15"/>
+                                            <Setter Property="Height" Value="25"/>
+                                        </Style>
+
+                                    </StackPanel.Resources>
+                                    <!--<StackPanel Orientation="Horizontal">
+                                        <Image Source="ms-appx:///Assets/user-silhouette.png"  />
+                                        <TextBlock Text="Profile" x:Uid="Profile"
+                                               FontSize="{StaticResource TextStyleLargeFontSize}" 
+                                               Foreground="Black" 
+                                               VerticalAlignment="Center"/>
+                                    </StackPanel>-->
+                                    <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                                        <interactivity:Interaction.Behaviors>
+                                            <core:EventTriggerBehavior EventName="Tapped">
+                                                <core:NavigateToPageAction TargetPage="SmartMerchant.AgentHomePage" />
+                                            </core:EventTriggerBehavior>
+                                        </interactivity:Interaction.Behaviors>
+                                        <Image Source="ms-appx:///Assets/qr-codes.png"  />
+                                        <TextBlock Text="Generate QR" x:Uid="GenerateQr"
+                                               FontSize="{StaticResource TextStyleLargeFontSize}" 
+                                               Foreground="Black" 
+                                               VerticalAlignment="Center" />
+                                    </StackPanel>
+
+                                    <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                                        <interactivity:Interaction.Behaviors>
+                                            <core:EventTriggerBehavior EventName="Tapped">
+                                                <core:InvokeCommandAction Command="{Binding LogoutCommand}"/>
+                                            </core:EventTriggerBehavior>
+                                        </interactivity:Interaction.Behaviors>
+                                        <Image Source="ms-appx:///Assets/padlock.png"  />
+                                        <TextBlock Text="Log Out" x:Uid="Logout"
+                                               FontSize="{StaticResource TextStyleLargeFontSize}" 
+                                               Foreground="Black" 
+                                               VerticalAlignment="Center"/>
+                                    </StackPanel>
+
+                                </StackPanel>
+                            </Grid>
+                        </Flyout>
+                    </Button.Flyout>
+                </AppBarButton>
+                <Image Source="ms-appx:///Assets/top.png" Height="50" />
+            </StackPanel>
             <StackPanel Grid.Row="1" Background="#ccdad1" >
                 <StackPanel Background="#FF0C2027" >
-                    <TextBlock Text="Merchant Application" FontSize="{StaticResource TextStyleLargeFontSize}" HorizontalAlignment="Center" Margin="0,10"/>
+                    <TextBlock Text="Merchant Application" x:Uid="Merchant" FontSize="{StaticResource TextStyleLargeFontSize}" HorizontalAlignment="Center" Margin="0,10"/>
                 </StackPanel>
                 <Image Height="270" Source="ms-appx:///Assets/receipt.png" Stretch="UniformToFill" />
                 <TextBlock x:Uid="Enter" Text="Enter Amount to charge" FontSize="{StaticResource TextStyleMediumFontSize}" Foreground="Black" HorizontalAlignment="Center" Margin="0,20,0,10"/>
@@ -44,7 +112,7 @@
                     <StackPanel Background="#63adf2">
                         <Button x:Name="btnSend" Visibility="Collapsed" x:Uid="btnSend" Content="Send" HorizontalAlignment="Stretch" Foreground="White" 
                             Background="#63adf2" BorderBrush="#63adf2" Click="btnSend_Click"/>
-                        <Button x:Name="btnScan"                     
+                        <Button x:Name="btnScan" x:Uid="btnScan"                     
                     HorizontalAlignment="Stretch" 
                     Background="#63adf2" BorderBrush="#63adf2"                    
                     Click="btnScan_Click" Content="SCAN QR" VerticalContentAlignment="Stretch" Foreground="White"/>
@@ -59,4 +127,4 @@
 
     </Grid>
 
-</Page>
+</local:BindablePage>
