--- a/View/AddUserPage.xaml
+++ b/View/AddUserPage.xaml
@@ -20,65 +20,13 @@
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal" Background="{StaticResource MyBlack}">
-            <AppBarButton Icon="AllApps"  Margin="0" >
-                <Button.Flyout>
-                    <Flyout x:Name="MySettingsFlyOut" Placement="Left">
-                        <Grid>
-                            <Grid.Background>
-                                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                    <GradientStop Color="#FF948E8E" Offset="0"/>
-                                    <GradientStop Color="White" Offset="1"/>
-                                </LinearGradientBrush>
-                            </Grid.Background>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition/>
-                            </Grid.RowDefinitions>
-                            <StackPanel Background="{StaticResource MyBlack}">
-                                <StackPanel Margin="0,15">
-                                    <Image Source="ms-appx:///Assets/top.png" Height="60"  Margin="0" />
-                                </StackPanel>
-                            </StackPanel>
-                            <StackPanel Grid.Row="1">
-
-                                <StackPanel Orientation="Horizontal">
-                                    <AppBarButton Icon="DockBottom" HorizontalAlignment="Left" Margin="15,0,30,0" Foreground="Black" />
-                                    <TextBlock Text="Add New Card" x:Uid="AddCard"
-                                               FontSize="{StaticResource TextStyleLargeFontSize}" 
-                                               Foreground="Black" 
-                                               VerticalAlignment="Center"/>
-                                </StackPanel>
-                                <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
-                                    <interactivity:Interaction.Behaviors>
-                                        <core:EventTriggerBehavior EventName="Tapped">
-                                            <core:NavigateToPageAction TargetPage="SmartCash.ManageCardsPage" />
-                                        </core:EventTriggerBehavior>
-                                    </interactivity:Interaction.Behaviors>
-                                    <AppBarButton Icon="Redo" HorizontalAlignment="Left" Margin="15,0,30,0" Foreground="Black" />
-                                    <TextBlock Text="Reset user PIN" x:Uid="ResetPin"
-                                               FontSize="{StaticResource TextStyleLargeFontSize}" 
-                                               Foreground="Black" 
-                                               VerticalAlignment="Center" />
-                                </StackPanel>
-
-                                <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
-                                    <interactivity:Interaction.Behaviors>
-                                        <core:EventTriggerBehavior EventName="Tapped">
-                                            <core:InvokeCommandAction Command="{Binding LogoutCommand}"/>
-                                        </core:EventTriggerBehavior>
-                                    </interactivity:Interaction.Behaviors>
-                                    <Image Margin="43,0,56,20" Height="25" Source="ms-appx:///Assets/padlock.png"  />
-                                    <TextBlock Text="Log Out" x:Uid="Logout"
-                                               FontSize="{StaticResource TextStyleLargeFontSize}" 
-                                               Foreground="Black" 
-                                               VerticalAlignment="Center"/>
-                                </StackPanel>
-
-                            </StackPanel>
-                        </Grid>
-                    </Flyout>
-                </Button.Flyout>
-            </AppBarButton>
+            <AppBarButton Icon="Back"  Margin="0" >
+                <interactivity:Interaction.Behaviors>
+                    <core:EventTriggerBehavior EventName="Tapped">
+                        <core:InvokeCommandAction Command="{Binding BackCommand}" />
+                    </core:EventTriggerBehavior>
+                </interactivity:Interaction.Behaviors>
+                </AppBarButton>
             <TextBlock x:Uid="RegisterUser" Text="REGISTER USER" FontSize="{StaticResource TextStyleLargeFontSize}" Margin="40,0,0,0" VerticalAlignment="Center"/>
         </StackPanel>
 
